--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cos-js-sdk-v5": "^0.5.3",
+    "cos-nodejs-sdk-v5": "^2.5.5",
     "element-china-area-data": "^4.1.1",
     "element-ui": "^2.4.11",
     "vue": "^2.5.2",
